Readme added doc

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,25 +1,32 @@
-APP:= bmi-cli
+NAME := bmi-cli
 
 CC = gcc
 DEBUG = -g
 CFLAGS = -Wall -O2
 CFLAGS += -Werror -Wextra -pedantic -std=c11
 
-OBJS = $(wildcard *.o)
 SRCS = $(wildcard *.c)
-LIBS = 
+OBJS = $(wildcard *.o)
+
+LIBS =
 INCS =
 
-.PHONY: all clean print
+.PHONY: clean
 
-.o.c: $(SRCS) 
-	$(CC) $(CFLAGS) -c $<
+all: $(NAME)
 
-$(APP): $(SRCS) 
-	$(CC) $(CFLAGS) $< -o $@
+$(NAME): $(SRCS)
+	@echo Creating $(NAME)... -n
+	$(CC) $(CFLAGS) $^ -o $@
+
+%.o: %.c
+	$(CC) $(CFLAGS) -o $@ -c $<
+
+# Function used to check variables. Use on the command line:
+# make print-VARNAME
+# Useful for debugging and adding features
+print-%: ; @echo $*=$($*)
 
 clean:
-	@rm -rvf $(OBJS)
-	@rm -vf $(APP)	
-
-print-%: ; @echo $*=$($*)
+	@rm -vf *.o
+	@rm -vf $(NAME)
